Added logging to project
Logs can now be written to at 5 levels using bLog function

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,4 +1,5 @@
 {
+    "LogLevel"          :   "debug|info|warning|error|critical",
     "MySQLUser"         :   "mysql_user",
     "MySQLPass"         :   "mysql_password",
     "MySQLHost"         :   "ip_address",
